# qpe-toolbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: build_doc.yaml  deploy_doc.yaml  pre-commit_action.yaml  push_update.yaml  pytest_action.yaml  ruff-check_action.yaml  ruff-format_action.yaml  run_examples.yaml
docs/: Makefile
docs/source/: conf.py  index.md
docs/source/_static/: my-styles.css
docs/source/customapi/installation/: index.md
docs/source/customapi/tutorials/: index.md
docs/source/customapi/workflow/: index.md
examples/: building_circuits.py  chemistry_to_qubit.py  hyperoptimization.py  performance_mps.py  qpe_with_lcu.py  qpe_with_trotter.py  robust_phase_estimation.py  textbook_qpe.py  trotter_decomposition.py  variational_circuit_preparation.py
examples/precomputed_data/: brick_circ_perfo.json  graphs_QAOA.json  rand_circ_perfo.json
hooks/: check_math.sh  check_titles.sh  format_notebooks.sh
src/qpe_toolbox/: __init__.py
src/qpe_toolbox/circuit/: __init__.py  controls.py  gate_count.py  initialization.py  parametrized_circuits.py  plot_circuits.py  qaoa.py  serialize_circuits.py
src/qpe_toolbox/estimation/: __init__.py  hadamard_test.py  lcu_walk_operator.py  qft.py  quantum_phase_estimation.py  robust_phase_estimation.py
src/qpe_toolbox/hamiltonian/: __init__.py  chemistry.py  hamiltonian.py  pyscf_converter.py
src/qpe_toolbox/tensor/: __init__.py  mpomps_tools.py
tests/: conftest.py  test_examples.py  test_gate_count.py  test_hamiltonian.py  test_hartreefock.py  test_lcu.py  test_mpomps_tools.py  test_parametrized_circuits.py  test_plot_circs.py  test_project_attr.py  test_pyscf_converter.py  test_qaoa.py  test_qft.py  test_qpe.py  test_rpe.py  test_select_h2_sign.py  test_serialize_exe_mps.py  test_walk_qpe.py
