# --------------------------------------------------------------------------------------
# This file is part of qpe-toolbox.
#
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0. See LICENSE.txt and NOTICE.txt in the
# project root.
#
# --------------------------------------------------------------------------------------

[project]
name = "qpe-toolbox"
dynamic = ["version"]
authors = [
  { name = "Thibaud Louvet", email = "thibaud.louvet@quobly.io" },
  { name = "Calvin Ku", email = "calvin.ku@foxconn.com" },
  { name = "Yu-Cheng Chen", email = "kesson.yc.chen@foxconn.com" },
  { name = "Carlos Ramos Marimon", email = "carlos.marimon@quobly.io" },
  { name = "Olivier Gauthé", email = "olivier.gauthe@quobly.io" },
  { name = "Tristan Meunier", email = "tristan.meunier@quobly.io" },
  { name = "Min-Hsiu Hsieh", email = "min-hsiu.hsieh@foxconn.com" },
  { name = "Benoit Vermersch", email = "benoit.vermersch@quobly.io" },
]
description = "A Quantum Phase Estimation Toolbox"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Quantum Computing",
]
license-files = ["LICENSE.txt"]
dependencies = [
  "jax>=0.8.1",
  "jupyter>=1.1.1",
  "jupytext>=1.18.1",
  "numpy>=2.0.0",
  "openfermion>=1.0.0",
  "kahypar>=1.3.5",
  "optuna>=4.6.0",
  "pyscf>=2.0.0",
  "quimb>=1.11.2",
  "scipy>=1.16.3,!=1.17.0",
  "cmaes>=0.12.0",
  "qiskit>=2.3.0",
  "qiskit-quimb>=0.0.9",
  "pylatexenc>=2.10",
  "qiskit-aer>=0.17.2",
  "autoray>=0.8.4",
  "cotengra>=0.7.5",
]

  [project.urls]
  Homepage = "https://github.com/quobly-sw/qpe-toolbox"
  Issues = "https://github.com/quobly-sw/qpe-toolbox/issues"

[dependency-groups]
dev = ["jupytext>=1.18.1"]
docs = [
  "pydata-sphinx-theme>=0.16",
  "furo>=2024.6.29",
  "myst-nb>=1.3.0",
  "sphinx-autoapi>=3.6",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx>=8",
]
lint = ["pre-commit>=4.3.0", "ruff>=0.14.10"]
test = ["pytest>=9.0.0", "pytest-cov>=7.0.0", "pytest-xdist>=3.8"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool]
  [tool.coverage.run]
  branch = true
  source = ["qpe_toolbox"]

  [tool.coverage.report]
  show_missing = true
  skip_covered = true
  fail_under = 70

  [tool.hatch.version]
  path = "src/qpe_toolbox/__init__.py"

  [tool.jupytext]
  # Pair ipynb notebooks to py:percent text notebooks
  formats = "ipynb,py:percent"

  [tool.pytest.ini_options]
  addopts = "--cov=qpe_toolbox --cov-report=term-missing"

  [tool.ruff]
  line-length = 88

    [tool.ruff.format]
    exclude = ["examples/*py"]

    [tool.ruff.lint]
      select = [
        "A",
        "B",
        "C",
        "C90",
        "D209",
        "D403",
        "D405",
        "D413",
        "E",
        "EXE",
        "F",
        "FBT",
        "FURB",
        "I",
        "NPY",
        "PIE",
        "PLC",
        "PLE",
        "PLW",
        "UP",
        "RET",
        "RUF",
        "S",
        "SIM",
        "TRY",
        "W"
        ]
      ignore = [
        "E501",  # rely on format
        "PLC2401", # allow greek letters as variable name
        "SIM108",  # too opinionated
        "TRY003",  # ValueError is good enough
        ]
      allowed-confusables = ["α", "γ", "ν", "ρ","σ"]

    [tool.ruff.lint.isort]
    combine-as-imports = true

    [tool.ruff.lint.mccabe]
    max-complexity = 20

    [tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["F401"]
    "examples/*py" = ["E703", "S101"]
    "tests/*py" = ["S101"]
